# arduinorp6

./: .gitignore  CMakeLists.txt  arduinorp6.cpp  gui.cpp  gui.h  interface.cpp  interface.h  logwidget.cpp  logwidget.h  mainstatwidget.cpp  mainstatwidget.h  menu.cpp  menu.h  widget.h
rp6/: .gitignore  arduinobot.c  arduinobot.h  collisiontask.c  collisiontask.h  drivetask.c  drivetask.h  makefile  rotatetask.c  rotatetask.h  scantask.c  scantask.h
shared/: shared.h
